add first, middle and last name fields in valid response

--- a/content/data/pan/quickstart.mdx
+++ b/content/data/pan/quickstart.mdx
@@ -78,7 +78,10 @@ While testing on Sandbox, you may use the following sample values—
   "data": { 
     "aadhaar_seeding_status": "LINKED", // optional
     "category": "Individual", 
-    "full_name": "John Doe"
+    "full_name": "John Doe",
+    "first_name": "John Hartwell",
+    "middle_name": "Walter",
+    "last_name": "Doe"
   }, 
   "message": "PAN is valid", 
   "verification": "success",
