--- a/content/data/account-aggregator/consent-object.mdx
+++ b/content/data/account-aggregator/consent-object.mdx
@@ -30,7 +30,7 @@ Consent object contains the information about all the different types of data th
 | `fiTypes`                                                     | Specifies the type of financial information being requested for. Possible enums—`DEPOSIT`, `MUTUAL_FUNDS`, `INSURANCE_POLICIES`, `TERM_DEPOSIT`, `RECURRING_DEPOSIT`, `SIP`, `GOVT_SECURITIES`, `EQUITIES`, `BONDS`, `DEBENTURES`, `ETF`, and more. Click <a href="data/account-aggregator/fi-data-types" target="_blank">here</a> to learn more about the data types.                                       | Yes                                                            |
 | `vua`                                                         | Virtual user address (VUA) that identifies your customer when they login to the Account Aggregator. It should be sent in the format of **{customer_mobile_number}@onemoney-aa**                                                                                                                                                                                                                              | Yes                                                            |
 | `purpose`                                                     | This is used to indicate the purpose of requesting for data. As per the AA spec, the following codes are supported—<br/><li>`101`—Wealth management service</li><li>`102`—Customer spending patterns, budget or other reportings</li><li>`103`—Aggregated statement</li><li>`104`—Explicit consent to monitor the accounts</li><li>`105`—Explicit one-time consent for accessing data from the accounts</li> | Yes                                                            |
-| `dataRange`                                                   | This is used to specify the `from` and `to` date-time range for querying financial information. It is mandatory only when the `consentTypes` array includes `TRANSACTIONS`.                                                                                                                                                                                                                                  | Mandatory only if `consentTypes` array includes `TRANSACTIONS` |
+| `dataRange`                                                   | This is used to specify the `from` and `to` date-time range for querying financial information. It is mandatory only when the `consentTypes` array includes `TRANSACTIONS`.                                                                                                                                                                                                                                  | Mandatory |
 | `dataLife`                                                    | This is the time period for which you are allowed to process the data. Choose between `MONTH`, `YEAR`, `DAY`, `INF` as the `unit` and define a numeric `value` alongside. <br /> For more details on the difference between Data life and Data Storage, please see [Sahamati guidelines](https://sahamati.org.in/aa-community-guidelines-v1/storage-of-data/) (see SD001 in the table)                       | Yes                                                            |
 | `frequency` has 2 components—`unit` and `value`               | `unit` can be `HOURLY`, `DAILY`, `MONTHLY`, `YEARLY`. `value` has to be greater than 0.<br/>Additionally the maximum frequency value is defined is `1` request per HOUR. So, no more than `24` requests are allowed per DAY                                                                                                                                                                                  | Yes                                                            |
 | `dataFilter`                                                  | Allows you to specify conditions for filtering the data being fetched. For example, fetch transactions where the `TRANSACTIONAMOUNT` is greater than or equal to INR 20,000. You can use the `type`, `operator` like `>, <, <=, >=` and `value` like `5000` keys to set the filters.                                                                                                                         | No                                                             |
