fix(AG-1478) updated Get Consent API response

--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -568,7 +568,7 @@ Auto-Fetch data feature aims to absorb this complexity from the FIUs. With Auto-
                             <CodeBlockWithCopy language="json">
 {`POST /your-webhook-endpoint
 {
-    "type": "FI_DATA_FAILURE",
+    "type": "FI_DATA_FAILED",
     "timestamp": "2023-08-28T17:12:51.521Z",
     "consentId": "af43608a-ed6e-4c65-9745-0386ba5fd91b",
     "success": true,
