--- a/content/payments/umap/mandates/one-shot/execute.mdx
+++ b/content/payments/umap/mandates/one-shot/execute.mdx
@@ -14,7 +14,8 @@ visible_in_sidebar: true
   🌟 Pre-debit notification ↗
 </a>
 
-<br />
+<hr class="primary" />
+
 Once the mandate pre debit notification is **successful**, the merchant can execute
 the mandate on the `executionDate` mentioned while sending the pre debit notification.
 
