--- a/content/payments/umap/mandates/recur.mdx
+++ b/content/payments/umap/mandates/recur.mdx
@@ -14,7 +14,7 @@ visible_in_sidebar: true
   🌟 UPI mandates overview ↗
 </a>
 
-<br />
+<hr class="primary" />
 
 #### What is a recurring mandate ?
 
