--- a/content/payments/umap/mandates/recur/check-status.mdx
+++ b/content/payments/umap/mandates/recur/check-status.mdx
@@ -14,7 +14,7 @@ visible_in_sidebar: true
   🌟 Execute mandate ↗
 </a>
 
-<br />
+<hr class="primary" />
 
 A recurring mandate can have multiple payments associated to it.
 
