--- a/content/payments/umap/mandates/recur/execute.mdx
+++ b/content/payments/umap/mandates/recur/execute.mdx
@@ -14,7 +14,7 @@ visible_in_sidebar: true
   🌟 Pre-debit notification ↗
 </a>
 
-<br />
+<hr class="primary" />
 
 <Callout type="tip">
   A merchant needs to manually execute the mandate, <strong>only if</strong>{" "}
