--- a/content/payments/umap/mandates/recur/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/recur/pre-debit-notify.mdx
@@ -14,7 +14,7 @@ visible_in_sidebar: true
   🌟 Create recurring mandate ↗
 </a>
 
-<br />
+<hr class="primary" />
 
 Once the mandate is **LIVE** the merchant needs to send a pre debit notification 48 - 72 Hrs before debit / execution to let the customer be notified of the upcoming debit.
 
