--- a/content/payments/umap/mandates/reserve/create.mdx
+++ b/content/payments/umap/mandates/reserve/create.mdx
@@ -559,7 +559,7 @@ In addition to the notifications sent by UPI Setu, Merchant can use this API to 
   </li>
   <li>
     <code>umn</code> is a unique mandate identifier that is associated with this
-    mandate and is needed for pre debit notification and execution APIs.
+    mandate and is needed for execution APIs.
   </li>
 </ul>
 
@@ -576,8 +576,8 @@ In addition to the notifications sent by UPI Setu, Merchant can use this API to 
 
 <NextPage
   info={{
-    description: "Send pre debit notification.  ",
-    slug: "/payments/umap/mandates/one-shot/pre-debit-notify",
-    title: "Pre debit notification",
+    description: "Execute the mandate",
+    slug: "/payments/umap/mandates/reserve/execute",
+    title: "Execute the mandate",
   }}
 />
