--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -18,8 +18,7 @@ visible_in_sidebar: true
   🌟 Start API integration for aggregators ↗
 </a>
 
-<br />
-<br />
+<hr class="primary" />
 
 <Callout type="warning">
   The merchant on-boarding APIs are only relevant for an aggregator. If you are
