--- a/content/payments/umap/mandates/one-shot/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/one-shot/pre-debit-notify.mdx
@@ -14,7 +14,7 @@ visible_in_sidebar: true
   🌟 Create one time mandate ↗
 </a>
 
-<br />
+<hr class="primary" />
 
 <Callout type="tip">
   Pre debit notification is not needed if <code>blockFunds</code> is set as{" "}
