--- a/content/payments/umap/mandates/reserve/check-status.mdx
+++ b/content/payments/umap/mandates/reserve/check-status.mdx
@@ -14,7 +14,7 @@ visible_in_sidebar: true
   🌟 Execute mandate ↗
 </a>
 
-<br />
+<hr class="primary" />
 
 The merchant can use the **<i>check status API</i>** to check mandate payment status.
 
