--- a/content/payments/umap/mandates/reserve/execute.mdx
+++ b/content/payments/umap/mandates/reserve/execute.mdx
@@ -10,13 +10,14 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
   PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/one-shot/pre-debit-notify" target="_self">
-  🌟 Pre-debit notification ↗
+<a href="/payments/umap/mandates/reserve/create" target="_self">
+  🌟 Create mandate ↗
 </a>
 
-<br />
-Once the mandate pre debit notification is **successful**, the merchant can execute
-the mandate on the `executionDate` mentioned while sending the pre debit notification.
+<hr class="primary" />
+
+Once the mandate creation is **successful**, the merchant can execute
+the mandate on the `executionDate` mentioned.
 
 The merchant will have to call the **<i>execute mandate API</i>** with the correct set of parameters.
 
@@ -82,8 +83,8 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
   <tr>
     <td>amount</td>
     <td>
-      must be equal to the <code>amount</code> mentioned while sending mandate
-      pre debit notification
+      must be as per the <code>amountRule</code> and <code>maxAmountLimit</code>{" "}
+      configured while creating the mandate
     </td>
   </tr>
   <tr>
@@ -234,7 +235,7 @@ In addition to the notifications sent by UPI Setu, Merchant can use this API to 
 <NextPage
   info={{
     description: "Check mandate payment status.  ",
-    slug: "/payments/umap/mandates/one-shot/check-status",
+    slug: "/payments/umap/mandates/reserve/check-status",
     title: "Check mandate payment status",
   }}
 />
