Update reserve docs

--- a/content/payments/umap/mandates/reserve.mdx
+++ b/content/payments/umap/mandates/reserve.mdx
@@ -22,6 +22,15 @@ UPI Reserve is a specialized subproduct within our UPI OneShot (UPI Autopay) sol
 
 UPI Reserve leverages the UPI infrastructure to facilitate higher-value transactions, making it easier for customers to participate in IPOs through a streamlined, digital process.
 
+<br />
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/UPI_IPO_customer_flow_diagramwith_person/UPI_IPO_customer_flow_diagramwith_person.png"
+  alt="UPI_IPO"
+/>
+
+<br />
+
 <hr class="primary" />
 
 ### What can I do with this product?
@@ -44,27 +53,34 @@ UPI Reserve leverages the UPI infrastructure to facilitate higher-value transact
 4. **UPI Setu**, gets confirmation from NPCI on Mandate Creation, and funds are blocked in the customer’s bank account for the IPO.
 5. Once the mandate is **LIVE**, **UPI Setu** triggers another webhook notification which the merchant can use to mark the mandate status as **LIVE** at their end.
 
-<br/>
+<br />
 
 ###### Mandatory Conditions for UPI IPO
 
-| Condition         | Value|
-|-------------------|------|
-| MCC code          | 6211 |
-| Purpose code      | 01   |
-| BlockFunds        | Yes  |
-| Mandate frequency | one  |
-
+| Condition         | Value |
+| ----------------- | ----- |
+| MCC code          | 6211  |
+| Purpose code      | 01    |
+| BlockFunds        | Yes   |
+| Mandate frequency | one   |
 
 <hr class="tertiary" />
 
 ###### Step 2 - Trigger mandate execution
 
-<Callout type="tip"><strong>Merchant</strong> does not have to send any pre-debit notification as customer allowing blocking of funds is equivalent to giving consent for transaction.</Callout>
+<Callout type="tip">
+  <strong>Merchant</strong> does not have to send any pre-debit notification as
+  customer allowing blocking of funds is equivalent to giving consent for
+  transaction.
+</Callout>
 
-<br/>
+<br />
 
-**Merchant** triggers a call to the execution API only if IPO is allotted and the customer’s account is debited depending on the level of allocation.
+- **Merchant** triggers a call to the execution API only if IPO is allotted and the customer’s account is debited depending on the level of allocation.
+
+- If IPO is partially allotted, merchant can trigger execution API and specify execution amount according to the value of partially allotted shares.
+
+- If IPO is not allotted to customer, then merchant can cancel the mandate to unblock the customer’s funds
 
 <hr class="tertiary" />
 
