--- a/content/payments/umap/mandates/recur.mdx
+++ b/content/payments/umap/mandates/recur.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Recur
 page_title: UPI Setu - Mandates - Recur
-order: 1
+order: 3
 visible_in_sidebar: true
 ---
 
@@ -14,7 +14,7 @@ visible_in_sidebar: true
   🌟 UPI mandates overview ↗
 </a>
 
-<br />
+<hr class="primary" />
 
 #### What is a recurring mandate ?
 
