--- a/content/payments/umap/mandates/reserve/execute.mdx
+++ b/content/payments/umap/mandates/reserve/execute.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Execute
-page_title: UPI Setu - Mandates - Execute mandate
+page_title: UPI Setu - Mandates - Execute Reserve Mandate
 order: 3
 visible_in_sidebar: true
 ---
@@ -10,25 +10,14 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
   PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/mandates/recur/pre-debit-notify" target="_self">
-  🌟 Pre-debit notification ↗
+<a href="/payments/umap/mandates/reserve/create" target="_self">
+  🌟 Create mandate ↗
 </a>
 
 <hr class="primary" />
 
-<Callout type="tip">
-  A merchant needs to manually execute the mandate, <strong>only if</strong>{" "}
-  <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
-  <code>false</code> while creating a mandate.
-</Callout>
-
-<br />
-
-Once the pre-debit notification against the manadate is `successful`, the merchant can
-execute the mandate on the specified `executionDate` while sending the pre-debit
-notification.
-
-The process for mandate execution is described in the below diagram:
+Once the mandate creation is **successful**, the merchant can execute
+the mandate on the `executionDate` mentioned.
 
 The merchant will have to call the **<i>execute mandate API</i>** with the correct set of parameters.
 
@@ -83,9 +72,8 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
     "umn": "setumandate1234789@ybl"
 }`}
 </CodeBlockWithCopy>
-
 <p>
-  <b>Request body parameter values for executing a recurring mandate</b>
+  <b>Request body parameter values for executing a Reserve mandate</b>
 </p>
 <table>
   <tr>
@@ -95,9 +83,13 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
   <tr>
     <td>amount</td>
     <td>
-      must be equal to the <code>amount</code> mentioned while sending mandate
-      pre debit notification
+      must be as per the <code>amountRule</code> and <code>maxAmountLimit</code>{" "}
+      configured while creating the mandate
     </td>
+  </tr>
+  <tr>
+    <td>sequenceNumber</td>
+    <td>1</td>
   </tr>
   <tr>
     <td>umn</td>
@@ -151,18 +143,11 @@ To know more about all the API params, please refer to the API documentation <a 
 
 <p>
   In addition to the notifications, the merchant can also use{" "}
-  <Link href="/payments/umap/mandates/recur/execute#check-mandate-execution-status">
+  <Link href="/payments/umap/mandates/one-shot/execute#check-mandate-execution-status">
     check mandate execution status API
   </Link>{" "}
   to check if execution is <b>successful</b>
 </p>
-
-<Callout type="highlight">
-  If <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
-  <code>true</code> while creating a mandate, UPI Setu will schedule executions
-  and send notifications to the merchant for <code>execution confirmation</code>{" "}
-  and <code>mandate status</code> in every recurrence cycle
-</Callout>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
 
@@ -250,7 +235,7 @@ In addition to the notifications sent by UPI Setu, Merchant can use this API to 
 <NextPage
   info={{
     description: "Check mandate payment status.  ",
-    slug: "/payments/umap/mandates/recur/check-status",
+    slug: "/payments/umap/mandates/reserve/check-status",
     title: "Check mandate payment status",
   }}
 />
