--- a/content/changelog/changelog.mdx
+++ b/content/changelog/changelog.mdx
@@ -7,4 +7,43 @@ visible_in_sidebar: false
 
 ## Changelog
 
+
+
 <Callout type="highlight">Feature</Callout>
+
+
+<Timeline
+    changelogList=[
+        {
+            version: "1.15.1",
+            changes: [
+                {
+                    type: "added",
+                    content: (
+                        <Element as="li">
+                            <Text className="inline">
+                                Added <code>WindowWithBlocks</code>, <code>DocumentWithCode</code>,{" "}
+                                <code>FlaskWithBraces</code> & <code>FlaskWithCode</code> pictograms
+                            </Text>
+                        </Element>
+                    ),
+                },
+            ],
+        },
+        {
+            version: "1.15.0",
+            changes: [
+                {
+                    type: "added",
+                    content: (
+                        <Element as="li">
+                            <Text className="inline">
+                                Added <code>PersonWithTools</code> pictogram
+                            </Text>
+                        </Element>
+                    ),
+                },
+            ],
+        },
+    ]
+/>
