--- a/content/changelog/changelog.mdx
+++ b/content/changelog/changelog.mdx
@@ -19,14 +19,7 @@ visible_in_sidebar: false
             changes: [
                 {
                     type: "added",
-                    content: (
-                        <Element as="li">
-                            <Text className="inline">
-                                Added <code>WindowWithBlocks</code>, <code>DocumentWithCode</code>,{" "}
-                                <code>FlaskWithBraces</code> & <code>FlaskWithCode</code> pictograms
-                            </Text>
-                        </Element>
-                    ),
+                    content: "add new library",
                 },
             ],
         },
@@ -35,13 +28,7 @@ visible_in_sidebar: false
             changes: [
                 {
                     type: "added",
-                    content: (
-                        <Element as="li">
-                            <Text className="inline">
-                                Added <code>PersonWithTools</code> pictogram
-                            </Text>
-                        </Element>
-                    ),
+                    content: ""add new library 2",
                 },
             ],
         },
