--- a/content/changelog/changelog.mdx
+++ b/content/changelog/changelog.mdx
@@ -12,25 +12,39 @@ visible_in_sidebar: false
 <Callout type="highlight">Feature</Callout>
 
 
-<Timeline
-    changelogList=[
-        {
-            version: "1.15.1",
-            changes: [
-                {
-                    type: "added",
-                    content: "add new library",
-                },
-            ],
-        },
-        {
-            version: "1.15.0",
-            changes: [
-                {
-                    type: "added",
-                    content: ""add new library 2",
-                },
-            ],
-        },
-    ]
+<Timeline changelogList={
+[
+    {
+	    version: "1.15.1",
+		changes: [
+			{
+				type: "added",
+				content: (
+					<Element as="li">
+						<Text className="inline">
+							Added <code>WindowWithBlocks</code>, <code>DocumentWithCode</code>,{" "}
+							<code>FlaskWithBraces</code> & <code>FlaskWithCode</code> pictograms
+						</Text>
+					</Element>
+				),
+			},
+		],
+	},
+	{
+		version: "1.15.0",
+		changes: [
+			{
+				type: "added",
+				content: (
+					<Element as="li">
+						<Text className="inline">
+							Added <code>PersonWithTools</code> pictogram
+						</Text>
+					</Element>
+				),
+			},
+		],
+	},
+]
+}
 />
