--- a/content/changelog/changelog.mdx
+++ b/content/changelog/changelog.mdx
@@ -7,10 +7,9 @@ visible_in_sidebar: false
 
 ## Changelog
 
+#### This changelog container all the content updates happening to any product across docs
 
-
-<Callout type="highlight">Feature</Callout>
-
+<hr kind="primary"/>
 
 <Timeline changelogList={
 [
@@ -45,6 +44,5 @@ visible_in_sidebar: false
 			},
 		],
 	},
-]
-}
+]}
 />
