--- a/content/changelog/changelog.mdx
+++ b/content/changelog/changelog.mdx
@@ -6,7 +6,7 @@ visible_in_sidebar: false
 ---
 
 ## Changelog
-
+<br/>
 #### This changelog container all the content updates happening to any product across docs
 
 <hr kind="primary"/>
@@ -33,7 +33,7 @@ visible_in_sidebar: false
 		version: "1.15.0",
 		changes: [
 			{
-				type: "added",
+				type: "feature",
 				content: (
 					<Element as="li">
 						<Text className="inline">
