--- a/content/payments/umap/mandates/reserve.mdx
+++ b/content/payments/umap/mandates/reserve.mdx
@@ -108,8 +108,8 @@ These have been detailed in the <b>Mandate operations</b> section within UPI man
 
 <NextPage
   info={{
-    description: "Create single block multi-debit mandate.  ",
-    slug: "/payments/umap/mandates/reserve-plus/create",
-    title: "Create single block multi-debit mandate",
+    description: "Create reserve mandate",
+    slug: "/payments/umap/mandates/reserve/create",
+    title: "Create reserve mandate",
   }}
 />
