Update UPI Setu components

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -19,7 +19,7 @@ Choose one or more of our products under the UPI Setu mandates stack to—
 
 ###### Explore our mandate products
 
-<UPI SetuMandates />
+<UMAPMandates />
 
 ### Key features
 
