--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -19,7 +19,7 @@ Choose one or more of our products under the UPI Setu Payments stack to—
 
 ###### Explore our payment products
 
-<UPI SetuPayments />
+<UMAPPayments />
 
 <hr class="primary" />
 
