--- a/content/data/bav/pennydrop-pennyless/api-reference.mdx
+++ b/content/data/bav/pennydrop-pennyless/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: API reference
-page_title: BAV Pennydrop-pennyless API reference
-order: 2
+page_title: Pennydrop-pennyless API reference
+order: 3
 visible_in_sidebar: true
 ---
