add note in faq about mock payment

--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -91,8 +91,10 @@ Example of a UPI deeplink is `upi://pay?pa=rpd@kaypay&...`. Modify the deeplinks
     </td>
   </tr>
 </table>
-
-
+<br/>
+<Callout type="tip">
+  Note: UPI link will not work in the sandbox/UAT environment. For testing purposes, only use the <a href="data/bav/reverse-penny-drop/api-integration#mock-payment">Mock Payment API</a> to simulate the payment flow.
+</Callout>
 <br/>
 <br/>
 
