AAGW: Updated error codes and FIP APIs

--- a/content/data/account-aggregator/fi-data-types.mdx
+++ b/content/data/account-aggregator/fi-data-types.mdx
@@ -16,7 +16,16 @@ The schema across all FI types adheres to a set of defined components:
 
 ### Testing with Setu FIP
 
-Setu FIP to help you get access to rich mock data for FI type **Deposit** as per the Account Aggregator specifications. More FI types will be available soon.
+Setu FIP helps you get access to rich mock data for various FI types as per the Account Aggregator specifications. The currently supported FI types are:
+
+| **Category**  | **FI Types** |
+| ------------- | ------------ |
+| Bank          | DEPOSIT, TERM_DEPOSIT, RECURRING_DEPOSIT |
+| Investment    | MUTUAL_FUNDS, ETF, EQUITIES, NPS |
+| Insurance     | INSURANCE_POLICIES |
+| GST           | GSTR1_3B |
+
+More FI types will be available soon.
 
 ###### **How to test?**
 
