--- a/content/data/account-aggregator/api-integration/notifications.mdx
+++ b/content/data/account-aggregator/api-integration/notifications.mdx
@@ -72,7 +72,7 @@ In cases where the user **cancels** the consent before login, or **rejects** the
       tabs={[
         {
           key: "1",
-          label: <Badge>UserCancelled</Badge>,
+          label: <Badge type="failure">UserCancelled</Badge>,
           content: (
             <>
               <h5>Response</h5>
@@ -95,7 +95,7 @@ In cases where the user **cancels** the consent before login, or **rejects** the
         },
         {
           key: "2",
-          label: <Badge>UserRejected</Badge>,
+          label: <Badge type="failure">UserRejected</Badge>,
           content: (
             <>
               <h5>Response</h5>
@@ -118,7 +118,7 @@ In cases where the user **cancels** the consent before login, or **rejects** the
         },
         {
           key: "3",
-          label: <Badge>Error while fetching consent from upstream AA</Badge>,
+          label: <Badge type="failure">Upstream AA</Badge>,
           content: (
             <>
               <h5>Response</h5>
