Updated state wise denomination for estamp

--- a/content/data/esign/estamp.mdx
+++ b/content/data/esign/estamp.mdx
@@ -145,57 +145,49 @@ Here is a quick description of the additional values required to be passed for s
 
 <hr class="primary" />
 
-## Supported Indian state and their code
+## Supported Indian States, Denomination and their state codes
 
 <table>
-<tr><th>State Code</th><th>State Name</th></tr>
-<tr><td>1</td><td>Andaman and Nicobar Islands</td></tr>
-<tr><td>2</td><td>Andhra Pradesh</td></tr>
-<tr><td>3</td><td>Arunachal Pradesh</td></tr>
-<tr><td>4</td><td>Assam</td></tr>
-<tr><td>5</td><td>Bihar</td></tr>
-<tr><td>6</td><td>Chandigarh</td></tr>
-<tr><td>7</td><td>Chattisgarh</td></tr>
-<tr><td>8</td><td>Dadra and Nagar Haveli</td></tr>
-<tr><td>9</td><td>Daman and Diu</td></tr>
-<tr><td>10</td><td>Delhi</td></tr>
-<tr><td>11</td><td>Goa</td></tr>
-<tr><td>12</td><td>Gujarat</td></tr>
-<tr><td>13</td><td>Haryana</td></tr>
-<tr><td>14</td><td>Himachal Pradesh</td></tr>
-<tr><td>15</td><td>Jammu and Kashmir</td></tr>
-<tr><td>16</td><td>Jharkhand</td></tr>
-<tr><td>17</td><td>Karnataka</td></tr>
-<tr><td>18</td><td>Kerala</td></tr>
-<tr><td>19</td><td>Lakshadweep Islands</td></tr>
-<tr><td>20</td><td>Madhya Pradesh</td></tr>
-<tr><td>21</td><td>Maharashtra</td></tr>
-<tr><td>22</td><td>Manipur</td></tr>
-<tr><td>23</td><td>Meghalaya</td></tr>
-<tr><td>24</td><td>Mizoram</td></tr>
-<tr><td>25</td><td>Nagaland</td></tr>
-<tr><td>26</td><td>Odisha</td></tr>
-<tr><td>27</td><td>Pondicherry</td></tr>
-<tr><td>28</td><td>Punjab</td></tr>
-<tr><td>29</td><td>Rajasthan</td></tr>
-<tr><td>30</td><td>Sikkim</td></tr>
-<tr><td>31</td><td>Tamil Nadu</td></tr>
-<tr><td>32</td><td>Telangana</td></tr>
-<tr><td>33</td><td>Tripura</td></tr>
-<tr><td>34</td><td>Uttar Pradesh</td></tr>
-<tr><td>35</td><td>Uttarakhand</td></tr>
-<tr><td>36</td><td>West Bengal</td></tr>
+<tr><th>State Code</th><th>State Name</th><th>Stamp Value</th><th>Type of Stamp Paper</th></tr>
+<tr><td>4</td><td>Assam</td><td>100, 500</td><td>eStamp</td></tr>
+<tr><td>6</td><td>Chandigarh</td><td>10 to 500</td><td>eStamp</td></tr>
+<tr><td>10</td><td>Delhi</td><td>100 to 500</td><td>eStamp</td></tr>
+<tr><td>12</td><td>Gujarat</td><td>50, 100, 300, 500</td><td>eStamp</td></tr>
+<tr><td>13</td><td>Haryana</td><td>101 to 1 lakh & above</td><td>eStamp</td></tr>
+<tr><td>14</td><td>Himachal Pradesh</td><td>10, 20, 50, 100, 500</td><td>eStamp</td></tr>
+<tr><td>15</td><td>Jammu and Kashmir</td><td>10 to 500</td><td>eStamp</td></tr>
+<tr><td>16</td><td>Jharkhand</td><td>10 to 1 lakh & above</td><td>eStamp</td></tr>
+<tr><td>17</td><td>Karnataka</td><td>100, 200, 500 & above</td><td>eStamp</td></tr>
+<tr><td>20</td><td>Madhya Pradesh</td><td>50, 100, 500 & above</td><td>eStamp & Physical stamp</td></tr>
+<tr><td>21</td><td>Maharashtra</td><td>100, 500</td><td>Physical stamp</td></tr>
+<tr><td>28</td><td>Punjab</td><td>10 to 500</td><td>eStamp</td></tr>
+<tr><td>29</td><td>Rajasthan</td><td>50, 100, 200, 500 & above</td><td>eStamp</td></tr>
+<tr><td>31</td><td>Tamil Nadu</td><td>10 to 1 lakh & above</td><td>eStamp</td></tr>
+<tr><td>32</td><td>Telangana</td><td>20, 50, 100</td><td>Physical stamp</td></tr>
+<tr><td>34</td><td>Uttar Pradesh</td><td>10 to 1 lakh & above</td><td>eStamp</td></tr>
+<tr><td>35</td><td>Uttarakhand</td><td>10, 20, 100, 500</td><td>eStamp</td></tr>
+<tr><td>36</td><td>West Bengal</td><td>10, 20, 50, 100, 500</td><td>Physical stamp</td></tr>
+<tr><td>99</td><td>Ladakh</td><td>10 to 500</td><td>eStamp</td></tr>
 </table>
 
+<br />
 
-## Supported eStamp value
-The supported eStamp values/denomination are:
+### Sample eStamp and Physical Stamp Paper
 
-  `20`, `50`, `100`, `200`, `300`, `400`, `500`
+<table>
+  <tr>
+    <th>eStamp</th>
+    <th>Physical Stamp</th>
+  </tr>
+  <tr>
+    <td><img src="https://d17kpcthhpu5tq.cloudfront.net/wp-content/uploads/2016/04/stamp-paper-2-500x700-1.jpg" alt="estamp"/></td>
+    <td><img src="https://d17kpcthhpu5tq.cloudfront.net/wp-content/uploads/2016/04/Telangana-Stamp-paper-500x700-1.jpg" alt="physical stamp"/></td>
+  </tr>
+</table>
 
 <br/>
 
-Please reach out to support@setu.co for any other denominations. 
+For any other state or denomination, please reach out to support@setu.co.
 
 
 <WasPageHelpful />
