--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -149,14 +149,18 @@ The screens you build as part of your app needs to conform to BBPS guidelines. Y
 -   **Complaint status screen**, where a customer can see the latest status associated with registered complaint.
 
 <Callout type="tip">
-    You may use the BBPS logo and branding guidelines provided{" "}
+    You may use the BBPS branding guidelines provided{" "}
     <a
-        href="https://drive.google.com/drive/folders/1CVgy1xuxHKlqnw5BtN4reCaYh13NmGqK?usp=sharing"
+        href="https://www.bharat-connect.com/assets/images/pages/brand-centre/media-kit/Bharat_Connect_Brand_Guidelines_11-09-24.pdf"
         target="blank"
     >
         here
     </a>
-    .{" "}
+    .{" "}BBPS logo assets can be downloaded{" "}
+    <a href="https://www.bharat-connect.com/assets/images/pages/brand-centre/media-kit/Bharat-Connect-MediaKit.zip">
+        here
+    </a>
+    .
 </Callout>
 
 <br />
@@ -164,12 +168,12 @@ The screens you build as part of your app needs to conform to BBPS guidelines. Y
 <p>
     Here is a{" "}
     <a
-        href="https://billpay.setu.co/10285899791456"
+        href="setu.co/pay"
         target="_blank"
     >
         BBPS-compliant UX flow
     </a>{" "}
-    and a quick summary of BBPS guidelines to keep in mind—,
+    and a quick summary of BBPS guidelines to keep in mind—
 </p>
 
 -   The app / website UI must contain a button for “Pay bills” with the BBPS logo shown.
@@ -180,16 +184,44 @@ The screens you build as part of your app needs to conform to BBPS guidelines. Y
 
 ### Step 5 — Run and submit test cases
 
-Run test cases mentioned in <a href="https://docs.google.com/spreadsheets/d/1h774FCseJKlxYpB2nflN-ONnmEZQiMoF6Ufpiyz0dxA/edit#gid=0" target="_blank"> this document </a> and submit documented results using a copy of the provided file. The results will verified by Setu and the bank to generate production credentials.
+Copy the below table in an Excel or Google sheet and run all test cases. Submit documented results in the same format. The results will verified by Setu and the bank to generate production credentials.
 
 <Callout type="warning">
     Postman logs not considered valid. Share results only once screen
     integration is complete.{" "}
 </Callout>
+<br/>
+
+| Case ID| Business scenario                  | Test case description                      | Positive/Negative | Expected result format | Logs | Result |
+|--------|------------------------------------|--------------------------------------------|-------------------|------------------------|------|--------|
+| CL1    | Listing of categories              | Call the get categories API. The API will return a list of category codes.                   | Positive | Attach log file containing URL and response | | |
+| BL1    | List of billers in categories      | Call the biller list API and make sure you are able to see a list of billers.                | Positive | Attach log file containing URL, Request and Response for at least 3 categories | | |
+| BL2    | List of billers in categories      | Call the biller list API for a category code that does not exist.                            | Negative | Attach log file containing URL, Request and Response  | | |
+| BF1    | Bill fetch - step 1                | Call the bill fetch register API.                                                            | Positive | Attach log file containing URL, Request and Response  | | |
+| BF2    | Bill fetch - step 2                | Call the get fetched bill API with the right context from bill fetch register API. Assert that the bill is returned. | Positive | Attach log file containing URL, Request and Response  | | |
+| BF3    | Bill fetch - step 1 (invalid param)| Call bill fetch API with wrong customer parameters for the biller. This will give error.     | Negative | Attach log file containing URL, Request and Response  | | |
+| BF4    | Bill fetch - step 1 (invalid regex)| Call bill fetch API with wrong customer parameters with invalid regex. This will give error. | Negative | Attach log file containing URL, Request and Response  | | |
+| BF5    | Bill fetch - ADHOC                 | Call bill fetch API register and get fetched bill API for DTH. Assert that amount is not returned. | Negative | Attach log file containing URL, Request and Response  | | |
+| BF6    | Bill fetch - Wrong customer value  | Call bill fetch API  by entering wrong customer parameter input. Assert that you get an error for invalid customer parameter. | Negative | Attach log file containing URL, Request and Response  | | |
+| BP1    | Bill payment -  step 1             | Call bill payment API  for a successful bill fetch.                                          | Positive | Attach log file containing URL, Request and Response  | | |
+| BP2    | Bill payment -  step 2             | Call get payment status API after a successful bill payment.                                 | Positive | Attach log file containing URL, Request and Response  | | |
+| BP3    | Bill payment -  Adhoc - step 1     | Call bill payment API for a successful bill fetch for DTH.                                   | Positive | Attach log file containing URL, Request and Response  | | |
+| BP4    | Bill payment -  Adhoc - step 2     | Call get payment status API after a successful bill payment.                                 | Positive | Attach log file containing URL, Request and Response  | | |
+| BF7    | Bill fetch for zero amount         | Call bill fetch API 1 day after you have made payment. Assert that you get the “no bill due” error.| Negative | Attach log file containing URL, Request and Response  | | |
+| CT1    | Raise dispute                      | Call raise complaint API after you have successfully completed payment.                      | Positive | Attach log file containing URL, Request and Response  | | |
+| CT2    | Get dispute status                 | Call complaint status API after you have successfully completed payment.                     | Positive | Attach log file containing URL, Request and Response  | | |
+| BD1    | Get biller details                 | Call the biller details API with a valid biller and category code to see biller fields.      | Positive | Attach log file containing URL, Request and Response for at least 3 combinations  | | |
+| BD2    | Get biller details                 | Call the biller details API with an invalid biller or category code which does not exist. This will give error.                                                                                                                                       | Negative | Attach log file containing URL, Request and Response for at least 3 combinations  | | |
+| FD1    | Get biller fields                  | Call the biller fields API with a valid biller and category code to see biller fields.       | Positive | Attach log file containing URL, Request and Response for at least 3 combinations  | | |
+| FD2    | Get biller fields                  | Call the biller fields API with an invalid biller or category code which does not exist. This will give error.                                                                                                                                       | Negative | Attach log file containing URL, Request and Response for at least 3 combinations  | | |
+| AI1    | Amount limitation                  | Make a payment of Rs. 49999.                                                                 | Positive | Attach log file containing URL, Request and Response  | | |
+| AI2    | Amount limitation                  | Make a payment of Rs. 50000.                                                                 | Negative | Attach log file containing URL, Request and Response  | | |
+| AI3    | Amount limitation                  | Test all payment modes with limits.                                                          | Positive | Attach log file containing URL, Request and Response  | | |
+
 
 <hr class="primary" />
 
-#### Step 6 — Get Production credentials and go live
+### Step 6 — Get production credentials and go live
 
 You will receive production credentials once all the approvals and agreements are done. On receiving the production credentials, you can verify your integration and go live.
 
