--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -16,16 +16,16 @@ This page covers how you can integrate with our APIs, develop corresponding scre
 ### How to integrate
 
 <p>
-    Use provided{" "}
-    <a href="/payments/billpay/api-integration/api-reference" target="_blank">
-        API reference
-    </a>{" "}
-    to start integration. Request for a detailed API run through from Setu team,
-    if needed. Contact us at{" "}
-    <a href="https://setu.co/support" target="_blank">
-        Setu Support
-    </a>
-    , should you need any help during integration.
+  Use provided{" "}
+  <a href="/payments/billpay/api-integration/api-reference" target="_blank">
+    API reference
+  </a>{" "}
+  to start integration. Request for a detailed API run through from Setu team,
+  if needed. Contact us at{" "}
+  <a href="https://setu.co/support" target="_blank">
+    Setu Support
+  </a>
+  , should you need any help during integration.
 </p>
 
 A summary of the integration process—
@@ -83,11 +83,11 @@ Reach out to <a href="">onboarding@setu.co</a> to get a list of business details
 
 It is recommended that you set up a callback URL to receive notifications for various types of events, while using—
 
--   APIs to fetch bill for a customer
--   APIs to validate customer identifier with a biller
--   APIs to for completing a bill payment
--   APIs to raise disputes against a payment
--   APIs to receive an automatic bill due notification
+- APIs to fetch bill for a customer
+- APIs to validate customer identifier with a biller
+- APIs to for completing a bill payment
+- APIs to raise disputes against a payment
+- APIs to receive an automatic bill due notification
 
 When this is enabled by you, any successful `fetch`, `validate`, `payment` or `dispute` event gets posted to your callback URL.
 
@@ -95,30 +95,30 @@ You may specify only one callback URL. **This should be a valid URI string that 
 
 Setu will append the following default paths to this callback URL, to alert your on specific events—
 
-| Event type              | Path                        |
-|-------------------------|-----------------------------|
-| `fetch` a bill          | `/bills/fetch/response`     |
-| `validate` bill details | `/bills/validate/response`  |
-| `payment` of bill       | `/bills/payment/response`   |
-| `dispute` against bill  | `/bills/dispute/response`   |
+| Event type              | Path                       |
+| ----------------------- | -------------------------- |
+| `fetch` a bill          | `/bills/fetch/response`    |
+| `validate` bill details | `/bills/validate/response` |
+| `payment` of bill       | `/bills/payment/response`  |
+| `dispute` against bill  | `/bills/dispute/response`  |
 
 <br />
 <br />
 
 <Callout type="tip">
-    You may also <em>optionally</em> choose to specify custom paths or URLs for{" "}
-    <code>fetch</code>/<code>validate</code>/<code>payment</code>/
-    <code>dispute</code> events too.{" "}
-    <strong>
-        The URL may be relative (a path, without a host) or absolute (starting
-        with a scheme)
-    </strong>
-    .
-    <br />
-    <br />
-    In case you specify a path, it will get appended to the{" "}
-    <code>callbackURL</code> value. If you specify a URL, it will simply
-    override the callback URL value for that particular event.
+  You may also <em>optionally</em> choose to specify custom paths or URLs for{" "}
+  <code>fetch</code>/<code>validate</code>/<code>payment</code>/
+  <code>dispute</code> events too.{" "}
+  <strong>
+    The URL may be relative (a path, without a host) or absolute (starting with
+    a scheme)
+  </strong>
+  .
+  <br />
+  <br />
+  In case you specify a path, it will get appended to the{" "}
+  <code>callbackURL</code> value. If you specify a URL, it will simply override
+  the callback URL value for that particular event.
 </Callout>
 &nbsp;
 
@@ -138,58 +138,84 @@ Once you have received your API keys and agent ID for testing, you can integrati
 
 The screens you build as part of your app needs to conform to BBPS guidelines. You should submit a document with screenshots for the following screens—
 
--   **Category list screen**, on which all BBPS categories are listed.
--   **Biller list screen**, on which all billers under a selected category are listed.
--   **Customer input screen**, where a customer enters identifiers specific to a selected biller, before their bill can be fetched.
--   **Payment confirmation screen**, on which the customer confirms bill amount and proceeds with payment.
--   **Payment status screen**, when payment is being processed and is finally either successful or failed.
--   **Confirmation SMS**, this is the text that is sent after a payment is successful or failed.
--   **Bill receipt screen**, through which a customer can view and download receipt for a successful transaction.
--   **Raise complaint screen**, where a customer can raise complaint. Complaints are raised against specific transaction IDs.
--   **Complaint status screen**, where a customer can see the latest status associated with registered complaint.
+- **Category list screen**, on which all BBPS categories are listed.
+- **Biller list screen**, on which all billers under a selected category are listed.
+- **Customer input screen**, where a customer enters identifiers specific to a selected biller, before their bill can be fetched.
+- **Payment confirmation screen**, on which the customer confirms bill amount and proceeds with payment.
+- **Payment status screen**, when payment is being processed and is finally either successful or failed.
+- **Confirmation SMS**, this is the text that is sent after a payment is successful or failed.
+- **Bill receipt screen**, through which a customer can view and download receipt for a successful transaction.
+- **Raise complaint screen**, where a customer can raise complaint. Complaints are raised against specific transaction IDs.
+- **Complaint status screen**, where a customer can see the latest status associated with registered complaint.
 
 <Callout type="tip">
-    You may use the BBPS logo and branding guidelines provided{" "}
-    <a
-        href="https://drive.google.com/drive/folders/1CVgy1xuxHKlqnw5BtN4reCaYh13NmGqK?usp=sharing"
-        target="blank"
-    >
-        here
-    </a>
-    .{" "}
+  You may use the BBPS branding guidelines provided{" "}
+  <a
+    href="https://www.bharat-connect.com/assets/images/pages/brand-centre/media-kit/Bharat_Connect_Brand_Guidelines_11-09-24.pdf"
+    target="blank"
+  >
+    here
+  </a>
+  . BBPS logo assets can be downloaded <a href="https://www.bharat-connect.com/assets/images/pages/brand-centre/media-kit/Bharat-Connect-MediaKit.zip">
+    here
+  </a>.
 </Callout>
 
 <br />
 
 <p>
-    Here is a{" "}
-    <a
-        href="https://billpay.setu.co/10285899791456"
-        target="_blank"
-    >
-        BBPS-compliant UX flow
-    </a>{" "}
-    and a quick summary of BBPS guidelines to keep in mind—,
+  Here is a{" "}
+  <a href="https://setu.co/pay" target="_blank">
+    BBPS-compliant UX flow
+  </a>{" "}
+  and a quick summary of BBPS guidelines to keep in mind—
 </p>
 
--   The app / website UI must contain a button for “Pay bills” with the BBPS logo shown.
--   BBPS logo must be present on top right corner of all screens used by customer during search of biller or bill and also for screens relating to payment of bill.
--   BBPS assured logo must always be shown on the payment sucessful and payment receipt pages. The regular BBPS logo can be removed from these.
+- The app / website UI must contain a button for “Pay bills” with the BBPS logo shown.
+- BBPS logo must be present on top right corner of all screens used by customer during search of biller or bill and also for screens relating to payment of bill.
+- BBPS assured logo must always be shown on the payment sucessful and payment receipt pages. The regular BBPS logo can be removed from these.
 
 <hr class="primary" />
 
 ### Step 5 — Run and submit test cases
 
-Run test cases mentioned in <a href="https://docs.google.com/spreadsheets/d/1h774FCseJKlxYpB2nflN-ONnmEZQiMoF6Ufpiyz0dxA/edit#gid=0" target="_blank"> this document </a> and submit documented results using a copy of the provided file. The results will verified by Setu and the bank to generate production credentials.
+Copy the below table in an Excel or Google sheet and run all test cases. Submit documented results in the same format. The results will verified by Setu and the bank to generate production credentials.
 
 <Callout type="warning">
-    Postman logs not considered valid. Share results only once screen
-    integration is complete.{" "}
+  Postman logs not considered valid. Share results only once screen integration
+  is complete.{" "}
 </Callout>
+<br />
+
+| Case ID | Business scenario                   | Test case description                                                                                                        | Positive/Negative | Expected result format                                                           | Logs | Result |
+| ------- | ----------------------------------- | ---------------------------------------------------------------------------------------------------------------------------- | ----------------- | -------------------------------------------------------------------------------- | ---- | ------ |
+| CL1     | Listing of categories               | Call the get categories API. The API will return a list of category codes.                                                   | Positive          | Attach log file containing URL and response                                      |      |        |
+| BL1     | List of billers in categories       | Call the biller list API and make sure you are able to see a list of billers.                                                | Positive          | Attach log file containing URL, Request and Response for at least 3 categories   |      |        |
+| BL2     | List of billers in categories       | Call the biller list API for a category code that does not exist.                                                            | Negative          | Attach log file containing URL, Request and Response                             |      |        |
+| BF1     | Bill fetch - step 1                 | Call the bill fetch register API.                                                                                            | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| BF2     | Bill fetch - step 2                 | Call the get fetched bill API with the right context from bill fetch register API. Assert that the bill is returned.         | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| BF3     | Bill fetch - step 1 (invalid param) | Call bill fetch API with wrong customer parameters for the biller. This will give error.                                     | Negative          | Attach log file containing URL, Request and Response                             |      |        |
+| BF4     | Bill fetch - step 1 (invalid regex) | Call bill fetch API with wrong customer parameters with invalid regex. This will give error.                                 | Negative          | Attach log file containing URL, Request and Response                             |      |        |
+| BF5     | Bill fetch - ADHOC                  | Call bill fetch API register and get fetched bill API for DTH. Assert that amount is not returned.                           | Negative          | Attach log file containing URL, Request and Response                             |      |        |
+| BF6     | Bill fetch - Wrong customer value   | Call bill fetch API by entering wrong customer parameter input. Assert that you get an error for invalid customer parameter. | Negative          | Attach log file containing URL, Request and Response                             |      |        |
+| BP1     | Bill payment - step 1               | Call bill payment API for a successful bill fetch.                                                                           | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| BP2     | Bill payment - step 2               | Call get payment status API after a successful bill payment.                                                                 | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| BP3     | Bill payment - Adhoc - step 1       | Call bill payment API for a successful bill fetch for DTH.                                                                   | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| BP4     | Bill payment - Adhoc - step 2       | Call get payment status API after a successful bill payment.                                                                 | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| BF7     | Bill fetch for zero amount          | Call bill fetch API 1 day after you have made payment. Assert that you get the “no bill due” error.                          | Negative          | Attach log file containing URL, Request and Response                             |      |        |
+| CT1     | Raise dispute                       | Call raise complaint API after you have successfully completed payment.                                                      | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| CT2     | Get dispute status                  | Call complaint status API after you have successfully completed payment.                                                     | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| BD1     | Get biller details                  | Call the biller details API with a valid biller and category code to see biller fields.                                      | Positive          | Attach log file containing URL, Request and Response for at least 3 combinations |      |        |
+| BD2     | Get biller details                  | Call the biller details API with an invalid biller or category code which does not exist. This will give error.              | Negative          | Attach log file containing URL, Request and Response for at least 3 combinations |      |        |
+| FD1     | Get biller fields                   | Call the biller fields API with a valid biller and category code to see biller fields.                                       | Positive          | Attach log file containing URL, Request and Response for at least 3 combinations |      |        |
+| FD2     | Get biller fields                   | Call the biller fields API with an invalid biller or category code which does not exist. This will give error.               | Negative          | Attach log file containing URL, Request and Response for at least 3 combinations |      |        |
+| AI1     | Amount limitation                   | Make a payment of Rs. 49999.                                                                                                 | Positive          | Attach log file containing URL, Request and Response                             |      |        |
+| AI2     | Amount limitation                   | Make a payment of Rs. 50000.                                                                                                 | Negative          | Attach log file containing URL, Request and Response                             |      |        |
+| AI3     | Amount limitation                   | Test all payment modes with limits.                                                                                          | Positive          | Attach log file containing URL, Request and Response                             |      |        |
 
 <hr class="primary" />
 
-#### Step 6 — Get Production credentials and go live
+### Step 6 — Get production credentials and go live
 
 You will receive production credentials once all the approvals and agreements are done. On receiving the production credentials, you can verify your integration and go live.
 
