--- a/content/payments/prepaid-recharge/quickstart.mdx
+++ b/content/payments/prepaid-recharge/quickstart.mdx
@@ -14,14 +14,11 @@ The **Mobile Prepaid Recharge API** enables partners to integrate and automate m
 - **Recharge Status Tracking**: Check the status of recharges in real-time.
 - **Flexible Configurations**: Support for multiple partners with configurable access, headers, and request transformation.
 
-
 ### Authentication:
 The API uses authentication mechanisms that allow access only to authorized partners. Each partner is provided with:
-- **Access Keys**: Specific to each partner for secure authentication.
+- **Access Keys**: Specific to each partner for secure authentication. 
+Reach out to sales@setu.co to get your keys. 
 
-
-### Rate Limits:
-To ensure fair usage, the API imposes rate limits on the number of requests a partner can make. Exceeding the rate limit will result in `429 Too Many Requests` responses.
 
 ### Contact & Support:
 For any issues or inquiries regarding the integration, contact support at **support@setu.co**.
