fixed spelling error

--- a/content/dev-tools/bridge/org-settings/api-keys/oauth.mdx
+++ b/content/dev-tools/bridge/org-settings/api-keys/oauth.mdx
@@ -127,7 +127,7 @@ An API to generate tokens, which are used to authorise any other API requests ma
       <td>
         Sandbox: <code>https://uat.setu.co/api/v2/auth/token</code>
         <br />
-        Production: <code>https://prod.setu.so/api/v2/auth/token</code>
+        Production: <code>https://prod.setu.co/api/v2/auth/token</code>
       </td>
     </tr>
     <tr>
