--- a/content/payments/bbps/resources/oauth.mdx
+++ b/content/payments/bbps/resources/oauth.mdx
@@ -163,7 +163,7 @@ An API to generate tokens, which are used to authorize any other API requests ma
       <td>
         Sandbox: <code>https://uat.setu.co/api/v2/auth/token</code>
         <br />
-        Production: <code>https://prod.setu.so/api/v2/auth/token</code>
+        Production: <code>https://prod.setu.co/api/v2/auth/token</code>
       </td>
     </tr>
     <tr>
