--- a/content/data/ekyc/quickstart.mdx
+++ b/content/data/ekyc/quickstart.mdx
@@ -133,7 +133,7 @@ Call this API to create a unique request to get your customer started on the eKY
       ),
     },
   ]}
-></Tabs>
+/>
 
 <hr class="primary" />
 
@@ -182,7 +182,8 @@ Call this API to get the status and data (if the status is `SUCCESS`) of your eK
             <Card padding="nano" shape="rounded" marginBottom="micro">
               <details>
                 <summary>
-                  <Badge type="success">SUCCESS</Badge> Aadhaar verification done
+                  <Badge type="success">SUCCESS</Badge> Aadhaar verification
+                  done
                 </summary>
                 <hr className="tertiary" />
                 <h5>Request</h5>
@@ -283,7 +284,7 @@ Call this API to get the status and data (if the status is `SUCCESS`) of your eK
       ),
     },
   ]}
-></Tabs>
+/>
 
 <hr class="primary" />
 
@@ -418,3 +419,5 @@ Call this API to get the status and data (if the status is `SUCCESS`) of your eK
     <td>Request made too soon. Please retry after some time.</td>
   </tr>
 </table>
+
+<WasPageHelpful />
