--- a/content/payments/prepaid-recharge/quickstart.mdx
+++ b/content/payments/prepaid-recharge/quickstart.mdx
@@ -7,12 +7,20 @@ visible_in_sidebar: true
 
 ## Overview
 
-The **Mobile Prepaid Recharge API** enables partners to integrate and automate mobile recharge functionality. This API allows authorized partners to perform prepaid mobile recharges across different operators, track recharge status, and manage transactions. It also supports querying recharge details for various filters, including partner-specific configurations.
+##### What is prepaid recharge?
+Prepaid recharge is the process of adding credit or balance to a prepaid mobile phone account. This allows users to continue using mobile services such as calls, text messages, and data without a fixed monthly contract.
 
-### Key Features:
-- **Mobile Prepaid Recharge**: Seamlessly perform prepaid mobile recharges for different operators.
-- **Recharge Status Tracking**: Check the status of recharges in real-time.
-- **Flexible Configurations**: Support for multiple partners with configurable access, headers, and request transformation.
+
+##### Who are the operators?
+Operators are the mobile network service providers that offer prepaid services to their customers. Our API supports recharges for all major operators in India.
+
+##### Benefits of using our API
+- Seamless integration: Easily incorporate prepaid recharge functionality into your website or application.
+- We provide best margins on all service providers
+- Wide coverage: Support for multiple operators across various regions.
+- Real-time transactions: Instant recharge processing and confirmation.
+- Secure: Industry-standard security measures to protect sensitive data.
+- Scalable: Designed to handle high volumes of transactions.
 
 ### Authentication:
 The API uses authentication mechanisms that allow access only to authorized partners. Each partner is provided with:
